new lecture continued

--- a/Logistic Regression/Building a logistic regression.ipynb
+++ b/Logistic Regression/Building a logistic regression.ipynb
@@ -429,6 +429,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model becomes as following:\n",
+    "\n",
+    "$log(\\frac{\\pi}{1-\\pi}) = -69.91 + 0.042*SAT$\n",
+    "\n",
+    "where $\\pi$ is the probability of the event occurring, and $1-\\pi$ is the probabilitty of event not occurring.\n",
+    "\n",
+    "So; $log(odds) = -69.91 + 0.042*SAT$\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
